--- a/_pgbackup/assets/css/style_1724329020.css
+++ b/_pgbackup/assets/css/style_1724329020.css
@@ -11,7 +11,7 @@ html {
 }
 
 section {
-    height: 100%;
+    height: 100vh;
     scroll-snap-align: start;
     scroll-snap-stop: always;
 }
@@ -21,9 +21,9 @@ a {
 }
 
 h1,
-h2,
-h3,
-h4 {
+h2,
+h3,
+h4 {
     font-family: "oswald", sans-serif !important;
 }
 
@@ -58,7 +58,7 @@ h1,
     align-items: center;
     justify-content: center;
     width: 80%;
-    gap: 10px;
+    gap: 10px
 }
 
 .portrait {
@@ -121,8 +121,8 @@ h1,
 }
 
 .hero h1,
-.hero p,
-.hero .portrait {
+.hero p,
+.hero .portrait {
     opacity: 0;
     animation: slideUp 1s ease-out forwards;
 }
@@ -144,7 +144,6 @@ h1,
     opacity: 0;
     animation: slideInLeft 1s ease-out forwards;
     animation-delay: 0.3s;
-
     /* Ajustez le délai si nécessaire */
 }
 
@@ -152,9 +151,9 @@ h1,
     opacity: 0;
     animation: slideInRight 1s ease-out forwards;
     animation-delay: 0.5s;
-
     /* Ajustez le délai pour synchroniser les menus */
 }
+
 
 #about {
     background-color: #333;
@@ -166,7 +165,7 @@ h1,
     align-items: center;
     justify-content: center;
     width: 80%;
-    gap: 10px;
+    gap: 10px
 }
 
 .logo-about {
